# oddsgraph

./: README.md  pyproject.toml
.github/workflows/: manual-full.yml
docs/: architecture.md  artifacts.md  benchmarks.md  builds.md  cli.md
oddsgraph/: _diagnostic_stages.py  _edge_stages.py  artifacts.py  benchmark.py  build.py  calibration.py  cli.py  coherence.py  contracts.py  evaluate.py  queries.py  reports.py  schema.py  sql.py  thresholds.py
tests/: conftest.py  synthetic.py  test_artifacts_build.py  test_build_modes.py  test_calibration.py  test_cli.py  test_coherence.py  test_contracts.py  test_docs.py  test_evaluation.py  test_hourly_build.py  test_logic_edges.py  test_oddsgraph.py  test_schema_validation.py
tests/fixtures/: synthetic_edge_oracle.csv  wc2026_edge_oracle.csv
